--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="debug.css">
+	<link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -9,6 +9,6 @@
     <button type="button" onclick="$windowAlert()">Click Me!</button>
   </div>
 
-  <script src="debug.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
